--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -36,6 +36,7 @@
     #summary-table table thead tr th {
         font-size: 12px!important;
         color: #4b4b4b;;
+        border: 1px solid #dee2e6;
     }
 
     /* This CSS controls read more/show less toggle. */
