--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -477,7 +477,7 @@
 
                 <div class="tab-pane fade show active pt-2" id="tab-table" aria-labelledby="tab-btn-table" role="tabpanel">
                     <div class="row">
-                        <div class="col-md-2 pl-1 border-right">
+                        <div class="col-md-2 pl-1">
 
                                 <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#geoModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i></button>Boundaries:</p>
                                 <div class="border py-1 mb-2 optionbox">
@@ -534,7 +534,7 @@
                 <div class="tab-pane fade pt-2" id="tab-map" aria-labelledby="tab-btn-map" role="tabpanel">
 
                     <div class="row">
-                        <div class="col-md-2 pl-1 border-right">
+                        <div class="col-md-2 pl-1">
                             <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#measureModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
                             <div class="border optionbox py-1 mb-2">
                                 <div class="" aria-labelledby="dropdownMapMeasures">
@@ -602,7 +602,7 @@
                 <div class="tab-pane fade pt-2" id="tab-trend" aria-labelledby="tab-btn-trend" role="tabpanel">
 
                     <div class="row">
-                        <div class="col-md-2 pl-1 border-right">
+                        <div class="col-md-2 pl-1">
                             <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#trendModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show by:</p>
                             <div class="border optionbox">
                                 <div class="" aria-labelledby="dropdownTrendComparisons">
@@ -643,7 +643,7 @@
                     <div class="tab-pane fade pt-2" id="tab-links" aria-labelledby="tab-btn-links" role="tabpanel">
 
                         <div class="row">
-                            <div class="col-md-2 pl-1 border-right">
+                            <div class="col-md-2 pl-1 ">
                                 <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#linksModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
                                 
                                 <!--
