--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -321,6 +321,9 @@
             color: green;
             font-weight: bold;
             }
+    .de-tab {
+        font-size: 16px;
+    }
 
     </style>
 
@@ -433,7 +436,7 @@
                    aria-controls="tab-table" aria-selected="false" role="tab" style="text-decoration:none">
                     <i class="fas fa-table mr-1" aria-hidden="true"></i>
                     <div class="d-none d-lg-inline-block">
-                        <span class="home-label-nc font-weight-bold ">Table</span>
+                        <span class="de-tab font-weight-bold ">Table</span>
                     </div>
                 </a>
         
@@ -441,7 +444,7 @@
                    aria-controls="tab-map" aria-selected="false" role="tab" style="text-decoration:none">
                     <i class="fas fa-map-marker-alt fa-fw"></i>
                     <div class="d-none d-lg-inline-block">
-                        <span class="home-label-nc font-weight-bold ">Map</span>
+                        <span class="de-tab font-weight-bold ">Map</span>
                     </div>
                 </a>
         
@@ -449,7 +452,7 @@
                    aria-controls="tab-trend" aria-selected="false" role="tab" style="text-decoration:none">
                     <i class="fas fa-chart-line fa-fw" aria-hidden="true"></i>
                     <div class="d-none d-lg-inline-block">
-                        <span class="home-label-nc font-weight-bold ">Trend</span>
+                        <span class="de-tab font-weight-bold ">Trend</span>
                     </div>
                 </a>
         
@@ -458,7 +461,7 @@
                    aria-controls="tab-links" aria-selected="false" aria-disabled="true" role="tab" style="text-decoration:none">
                    <i class="fas fa-project-diagram" aria-hidden="true"></i>
                     <div class="d-none d-lg-inline-block">
-                        <span class="home-label-nc font-weight-bold ">Correlate</span>
+                        <span class="de-tab font-weight-bold ">Correlate</span>
                     </div>
                 </a>
 
