fix signup link

--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -110,7 +110,7 @@
                 <i class="fas fa-bullhorn h2 text-primary" aria-hidden="true"></i>
               </div>
             </div>
-            <p class="text-black mb-4"><a class="font-weight-bold" href="#">Sign up here!</a> We won't share your email address.</p>
+            <p class="text-black mb-4"><a class="font-weight-bold" href="https://forms.gle/qcQvmLUWvBwjkFMRA" target="_blank">Sign up here!</a> We won't share your email address.</p>
           </div>
 
           <div class="shadow-sm mb-3 p-3 card-left-border">
