--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -39,7 +39,7 @@
             <div class="card content-card">
               <div class="card-content primary">
                 <div class="position-relative" style='height: 330px; width: 100%; background-image: url({{ relURL ( urls.JoinPath "images" .Params.featured_image ) }}); background-position: center; background-size: cover;'>
-                  <div class="">
+                  <div class="overlay-trends">
                     <!-- Can use overlay-trends, overlay-map or overlay-topics -->
                   </div>
                 </div>
