--- a/themes/dohmh/layouts/data-stories/single.html
+++ b/themes/dohmh/layouts/data-stories/single.html
@@ -9,19 +9,6 @@
         <!--start main content section-->
         <div class="col-xl-8 overflow-hidden fs-rg" id="primary-content">
 
-        <div class="row mt-2">
-            <div class="col-12">
-                <nav aria-label="breadcrumb">
-                    <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
-                        <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
-                        <li class="breadcrumb-item active d-none d-sm-block"><a href="{{ .Page.RelPermalink }}">{{ .Title }}</a></li>
-
-                    </ul>
-                </nav>
-            </div>
-        </div>
-
         <!-- language selection -->
         {{- if .IsTranslated -}}
             <nav class="navbar navbar-default my-2">
@@ -35,6 +22,23 @@
         {{- end -}}
 
         <div class="narrow my-2">
+            <div class="row mb-3">
+                <div class="col-12">
+                    <nav aria-label="breadcrumb">
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
+                            <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
+                            <li class="breadcrumb-item active d-none d-sm-block"><a href="{{ .Page.RelPermalink }}">{{ with .Params.shortTitle }}
+                                {{ . }}
+                              {{ else }}
+                                {{ .Title }}
+                              {{ end }}</a></li>
+    
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+
             <h1 class="h2 data-stories mb-3"><i class="fas fa-passport" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}</h1>
             <div class="container-fluid px-0">
 
