--- a/themes/dohmh/layouts/data-stories/single.html
+++ b/themes/dohmh/layouts/data-stories/single.html
@@ -21,8 +21,8 @@
             </nav>
         {{- end -}}
 
-        <div class="narrow my-2">
-            <div class="row mb-3">
+        <div class="narrow">
+            <div class="row my-2 mb-3">
                 <div class="col-12">
                     <nav aria-label="breadcrumb">
                         <ul class="breadcrumb">
