add correlated conditional

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -679,10 +679,12 @@
                                     </div>
                                 </div>
 
-                                <p class="fs-xs mb-0">Correlate with:</p>
-                                <div class="border optionbox-lg">
-                                    <div class="" aria-labelledby="dropdownLinksMeasures">
-                                        <!-- INSERT MENU ITEMS HERE -->
+                                <div id="correlateHolder">
+                                    <p class="fs-xs mb-0">Correlate with:</p>
+                                    <div class="border optionbox-lg">
+                                        <div class="" aria-labelledby="dropdownLinksMeasures">
+                                            <!-- INSERT MENU ITEMS HERE -->
+                                        </div>
                                     </div>
                                 </div>
 
