change map option button arrangement

--- a/themes/dohmh/layouts/data-explorer/leaflet-version.html
+++ b/themes/dohmh/layouts/data-explorer/leaflet-version.html
@@ -359,8 +359,8 @@
 
         <div class="my-1">
             <div class="dropdown">
-                <button class="btn btn-sm mr-1 float-left btn-white dropdown-toggle mb-1" type="button"
-                    id="dropdownMapMeasures" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Show as </button>
+                <button class="btn btn-sm btn-block btn-white dropdown-toggle mb-1" type="button"
+                    id="dropdownMapMeasures" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Estimated annual rate per 100,000 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMapMeasures">
                     <!-- INSERT MENU ITEMS HERE -->
                 </div>
@@ -368,8 +368,8 @@
             </div>
 
             <div class="dropdown">
-                <button class="btn btn-sm mx-1 float-left btn-white dropdown-toggle mb-1" type="button"
-                    id="dropdownMapTimes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Time period </button>
+                <button class="btn btn-sm float-left btn-white dropdown-toggle mb-1" type="button"
+                    id="dropdownMapTimes" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 2022 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMapTimes">
                     <!-- INSERT MENU ITEMS HERE -->
                 </div>
@@ -378,8 +378,8 @@
 
 
             <div class="dropdown">
-                <button class="btn btn-sm float-left btn-white dropdown-toggle mb-1" type="button"
-                        id="dropdownMapGeos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Boundaries </button>
+                <button class="btn btn-sm float-right btn-white dropdown-toggle mb-1" type="button"
+                        id="dropdownMapGeos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Change boundaries </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMapGeos">
                     <!-- INSERT MENU ITEMS HERE -->
                 </div>
