--- a/themes/dohmh/layouts/data-explorer/leaflet-version.html
+++ b/themes/dohmh/layouts/data-explorer/leaflet-version.html
@@ -430,9 +430,9 @@
                 
                     </div>
                     
-                    
+                    <div class="rightPanelOverlay" style="height:100%;">
                     <!-- visualization elements -->
-                    <div class="tab-content border-top rightPanelOverlay" id="tabs-01-content">
+                    <div class="tab-content border-top " id="tabs-01-content">
                 
                         <!-- TABLE TAB -->
         
@@ -571,6 +571,9 @@
         
                         </div>
                     </div>
+                    </div>
+                    
+
     </div>
 
 
