--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -58,7 +58,7 @@
 
           <div class="my-4">
               <button
-              class="btn btn-block btn-outline-secondary py-2 px-4 float-right"
+              class="btn btn-block btn-primary py-2"
               onclick="runQuestions()"
             >
               <i class="fas fa-arrow-circle-down mr-1" aria-hidden="true"></i>Click here to get started</button>
