--- a/themes/dohmh/layouts/partials/header-de.html
+++ b/themes/dohmh/layouts/partials/header-de.html
@@ -10,7 +10,7 @@
             <div class="nav-item">
 
                 <a href={{ relURL "" }} class="nav-link text-white font-weight-bold">
-                    <img src="{{ site.BaseURL }}7618350_heatmap_business_analytics_statistics_icon-gpr.ico" style="height: 20px" class="pr-1">Home</a>
+                    <img src="{{ site.BaseURL }}7618350_heatmap_business_analytics_statistics_icon-gpr.ico" style="height: 20px" class="pr-1">EH Data Portal</a>
                 </a>
 
             </div>
@@ -20,26 +20,6 @@
 
                 <a href={{ relURL "data-explorer" }} class="nav-link text-white font-weight-bold">
                     Data Explorer
-                </a>
-
-            </div>
-            <!-- .nav-item -->
-
-            <div class="nav-item">
-
-                <a href="#" class="nav-link text-white font-weight-bold" type="button"
-                data-toggle="modal" data-target="#aboutModal">
-                   About {{ .Title }}
-                </a>
-
-            </div>
-            <!-- .nav-item -->
-
-            <div class="nav-item">
-
-                <a href="#" class="nav-link text-white font-weight-bold" data-toggle="modal"
-                data-target="#topicModal">
-                Change topic
                 </a>
 
             </div>
